# brimley

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN_PHILOSOPHY.md  EXTENSIONS_GUIDE.md  MCP_SERVER_DESIGN.md  MCP_SERVER_GUIDE.md  MCP_SERVER_PLAN.md  QUICKSTART.md  TOOL_SCHEMA_REFERENCE.md  brimley-0.4-whats-new.md  brimley-0.5-what-next.md  brimley-application-structure.md  brimley-cli-and-repl-harness.md  brimley-configuration.md  brimley-context.md  brimley-diagnostics-and-error-reporting.md  brimley-discovery-and-loader-specification.md  brimley-embedded-deployments-and-port-management.md  brimley-entities.md  brimley-function-arguments.md  brimley-function-return-shape.md  brimley-functions.md  brimley-high-level-design.md  brimley-model-context-protocol-integration.md  brimley-naming-conventions.md  brimley-project-structure.md  brimley-python-functions.md  brimley-repl-admin-commands.md  brimley-sql-execution.md  brimley-sql-functions.md  brimley-template-functions.md
examples/: README.md  agent_sample.py  brimley.yaml  calc.py  hello.md  mcp_external_embedding.py  nested_greeting.py  setup_db.py  sha256_file.py  user_entity.py  users.sql
examples/mcp_server/: README.md  extensions.py  pyproject.toml  server.py  setup_db.py
examples/mcp_server/agents/: example-agent.md
examples/mcp_server/tools/: get_all_settings.yaml  get_setting.yaml  get_vip_users.yaml  upsert_setting.yaml
src/brimley/: __init__.py  config.py  core.py  extensions.py  schemas.py  validation.py
src/brimley/backend/: runner.py  sqlite.py
src/brimley/cli/: build.py  formatter.py  main.py  repl.py
src/brimley/config/: loader.py
src/brimley/core/: context.py  di.py  entity.py  models.py  naming.py  registry.py
src/brimley/discovery/: entity_parser.py  python_parser.py  runtime.py  scanner.py  schema_converter.py  sql_parser.py  template_parser.py  utils.py
src/brimley/execution/: arguments.py  dispatcher.py  execute_helper.py  jinja_runner.py  python_runner.py  result_mapper.py  sql_runner.py
src/brimley/infrastructure/: database.py
src/brimley/mcp/: __init__.py  adapter.py  fastmcp_provider.py  main.py  mock.py
src/brimley/runtime/: __init__.py  controller.py  daemon.py  mcp_refresh_adapter.py  polling_watcher.py  reload_contracts.py  reload_engine.py  repl_rpc.py
src/brimley/utils/: diagnostics.py
src/brimley_mcp/: __init__.py  adapter.py  main.py
tests/: conftest.py  test_arguments.py  test_build.py  test_cli.py  test_config.py  test_config_loader.py  test_context.py  test_context_config.py  test_core.py  test_core_extensions.py  test_daemon.py  test_database_init.py  test_debug_cli.py  test_decorators.py  test_diagnostics_display.py  test_discovery.py  test_e2e_examples.py  test_entities.py  test_entity_discovery.py  test_execute_function_helper.py  test_execution.py  test_execution_jinja.py  test_execution_python.py  test_execution_sql.py  test_extensions.py  test_extensions_integration.py  test_injection.py  test_mcp_adapter.py  test_mcp_cli.py  test_mcp_mock.py  test_mcp_provider.py  test_mcp_refresh_adapter.py  test_models.py  test_packaging_contract.py  test_parsers.py  test_polling_watcher.py  test_registry.py  test_reload_engine.py  test_repl.py  test_repl_rpc.py  (+11 more)
