[project]
name = "brimley"
version = "0.1.0"
description = "A defined SQL engine for AI agents"
authors = [
    {name = "William W. Spratley", email = "billspratley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0"
]

[tool.poetry]
packages = [{include = "brimley", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"


[tool.poetry.group.examples.dependencies]
fastmcp = "^2.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
