[project]
name = "brimley"
version = "0.1.0"
description = "A defined SQL engine for AI agents"
authors = [
    {name = "William W. Spratley", email = "billspratley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0"
]

[project.optional-dependencies]
server = [
    "fastmcp>=0.1.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
brimley-mcp = "brimley_mcp.main:app"

[tool.poetry]
packages = [
    {include = "brimley", from = "src"},
    {include = "brimley_mcp", from = "src"}
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"


[tool.poetry.group.examples.dependencies]
fastmcp = "^2.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
