[project]
name = "brimley-mcp-example"
version = "0.1.0"
description = "Example MCP server using Brimley"
authors = [
    {name = "William W. Spratley", email = "billspratley@gmail.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastmcp",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
brimley = {path = "../../", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
